[package]
name = "x800"
version = "0.1.0"
authors = ["Evelyn Lewis <evelyn@evelynlewis.net>"]
edition = "2021"
description = "a fast and minimal 2048 for POSIX"
license = "MIT"
categories = ["command-line-utilities", "games", "embedded"]
repository = "https://github.com/evelynlewis/x800"
keywords = [
    "2048",
    "command-line",
    "game",
    "libc",
    "minimal",
    "embedded",
]
readme = "README.md"

[lib]
name = "x800"
path = "src/lib.rs"

[[bin]]
name = "x800"
path = "src/bin.rs"

[dependencies]
fastrand = "2.0.1"
libc = "0.2"

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
panic = "abort"
