[package]
name = "x800-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
x800 = { path = ".." }

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1
strip = "debuginfo"
lto = "fat"
panic = "abort"

[[bin]]
name = "roger"
path = "fuzz_targets/roger.rs"
test = false
doc = false
bench = false
