[package]
name = "x800-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
honggfuzz = { version = "0.5", default-features = false }
x800 = { path = ".." }

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1
strip = "debuginfo"
lto = "fat"
panic = "abort"

[[bin]]
name = "roger"
path = "src/roger.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hroger"
path = "src/hroger.rs"
test = false
doc = false
bench = false
